--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.3",
+    "@react-native-community/netinfo": "^8.3.0",
+    "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/material-bottom-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "@react-navigation/stack": "^6.2.1",
+    "aws-amplify": "^4.3.21",
+    "aws-amplify-react-native": "^6.0.4",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
     "expo-constants": "~13.0.0",
@@ -38,6 +43,8 @@
     "@babel/core": "^7.12.9",
     "@types/react": "^17.0.41",
     "@types/react-native": "~0.64.12",
+    "@types/react-navigation": "^3.4.0",
+    "@types/react-router-dom": "^5.3.3",
     "jest": "^26.6.3",
     "jest-expo": "~44.0.1",
     "react-test-renderer": "17.0.1",
